/**
 * Copyright (c) 2022 Peking University and Peking University Institute for Computing and Digital Economy
 * SCOW is licensed under Mulan PSL v2.
 * You can use this software according to the terms and conditions of the Mulan PSL v2.
 * You may obtain a copy of Mulan PSL v2 at:
 *          http://license.coscl.org.cn/MulanPSL2
 * THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND,
 * EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT,
 * MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
 * See the Mulan PSL v2 for more details.
 */

syntax = "proto3";

package scow.server;

import "server/charging.proto";
import "server/job.proto";
import "server/user.proto";
import "server/account.proto";
import "server/bill.proto";
import "google/protobuf/timestamp.proto";
import "common/ended_job.proto";

message ExportAccountRequest {
  uint32 count = 1;
  optional string tenant_name = 2;
  optional string account_name = 3;
  // 为true时表明账户被上级手动封锁，false则为所有账户
  optional bool blocked = 4;
  // 为true时表明账户余额小于等于封锁阈值，false则为所有账户
  optional bool debt = 5;
  // 为true时表明账户为冻结状态，false则为所有账户
  optional bool frozen = 6;
  // 为true时表明账户在白名单中(状态不为冻结)或账户为未欠费账户即可以正常使用集群的账户，false则为所有账户
  optional bool normal = 7;
   // 为true时表明账户为已删除的账户，false则为所有账户
  optional bool deleted = 8;
  optional string owner_id_or_name = 9;
}

message ExportAccountResponse {
  repeated Account accounts = 1;
}

message ExportedUser {
  string user_id = 1;
  string name = 2;
  string email = 3;
  repeated string available_accounts = 4;
  string tenant_name = 5;
  google.protobuf.Timestamp create_time = 6;
  repeated TenantRole tenant_roles = 7;
  repeated PlatformRole platform_roles = 8;
}

message ExportUserRequest {
  uint32 count = 1;
  optional string tenant_name = 2;
  optional GetAllUsersRequest.UsersSortField sort_field = 3;
  optional SortDirection sort_order = 4;
  optional string id_or_name = 5;
  optional PlatformRole platform_role = 6;
  optional TenantRole tenant_role = 7;
}

message ExportUserResponse {
  repeated ExportedUser users = 1;
}

message ExportChargeRecordRequest {
  uint32 count = 1;
  google.protobuf.Timestamp start_time = 2;
  google.protobuf.Timestamp end_time = 3;
  //当types设置时，以types为准，否则以type为准
  optional string type = 4 [deprecated=true];
  repeated string types = 12;
  oneof target {
    // 返回这个租户（tenantName）下这个账户（accountName）的消费记录
    AccountOfTenantTarget account_of_tenant = 5;
    // 返回这个租户（tenantName）下多个账户的消费记录
    AccountsOfTenantTarget accounts_of_tenant = 6;
    // 返回所有租户下多个账户的消费记录
    AccountsOfAllTenantsTarget accounts_of_all_tenants = 7;
    // 返回这个租户（tenantName）的租户消费记录
    TenantTarget tenant = 8;
    // 返回所有租户的租户消费记录
    AllTenantsTarget all_tenants = 9;
  }
  repeated string user_ids = 10;
}

message ExportChargeRecordResponse {
  repeated ChargeRecord charge_records = 1;
}

message ExportPayRecordRequest {
  uint32 count = 1;
  google.protobuf.Timestamp start_time = 2;
  google.protobuf.Timestamp end_time = 3;
  repeated string types = 9;
  oneof target {
    // 返回这个租户（tenantName）下这个账户（accountName）的充值记录
    AccountOfTenantTarget account_of_tenant = 4;
    // 返回这个租户（tenantName）下多个账户的充值记录
    AccountsOfTenantTarget accounts_of_tenant = 5;
    // 返回这个租户（tenantName）的充值记录
    TenantTarget tenant = 6;
    // 返回所有租户充值记录
    AllTenantsTarget all_tenants = 7;
  }
}

message ExportPayRecordResponse {
  repeated PaymentRecord pay_records = 1;
}

message ExportBillRequest {
  uint32 count = 1;
  repeated string account_names = 2;
  BillType type = 3;
  optional string user_ids_or_names = 4;
  optional string term_start = 5;
  optional string term_end = 6;
  optional string tenant_name = 7;
}

message ExportBillResponse {
  repeated BillListItem bills = 1;
}

message ExportUserBillRequest {
  repeated int64 account_bill_ids = 1;
}

message ExportUserBillResponse {
  repeated UserBill user_bills = 1;
}

message ExportJobRecordRequest {
  uint32 count = 1;
  optional google.protobuf.Timestamp job_end_time_start = 2;
  optional google.protobuf.Timestamp job_end_time_end = 3;
  repeated string clusters = 4;
  oneof target {
    // 导出租户内某账户执行过的作业列表
    JobsOfAccountTarget jobs_of_account = 5;
    // 返回这个租户下某用户在某账户执行过的作业列表
    JobsOfAccountAndUserTarget jobs_of_account_and_user = 6;
    // 导出租户内某用户执行过的作业列表
    JobsOfUserTarget jobs_of_user = 7;
    // 导出租户内执行过的作业列表
    JobsOfTenantTarget jobs_of_tenant = 8;
    // 导出租户内执行过的特定ID的作业列表
    JobsOfJobIdTarget jobs_of_job_id = 9;
    JobsOfJobIdAndUserTarget jobs_of_job_id_and_user = 10;
    JobsOfJobIdAndAccountTarget jobs_of_job_id_and_account = 11;
  }
}

// 还要调整
message ExportJobRecordResponse {
  repeated common.JobInfo job_records = 1;
}

service ExportService {
  rpc ExportAccount(ExportAccountRequest) returns (stream ExportAccountResponse);
  rpc ExportUser(ExportUserRequest) returns (stream ExportUserResponse);
  rpc ExportChargeRecord(ExportChargeRecordRequest) returns (stream ExportChargeRecordResponse);
  rpc ExportPayRecord(ExportPayRecordRequest) returns (stream ExportPayRecordResponse);
  rpc ExportBill(ExportBillRequest) returns (stream ExportBillResponse);
  rpc ExportUserBill(ExportUserBillRequest) returns (stream ExportUserBillResponse);
  rpc ExportJobRecord(ExportJobRecordRequest) returns (stream ExportJobRecordResponse);
}
